fix: restrict CORS, remove unused IaController dep, make logging configurable + add user guide